--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
                 Квартира
               </div>
                 <div class="card-body h2">
-                  <a href="#">Система автоматизации, которая управляет освещением, отоплением, безопасностью и бытовой техникой через смартфон или голосовые команды. Она делает жизнь комфортнее, экономнее и безопаснее, адаптируясь под привычки и потребности жильцов.
+                  <a href="smart_appart.html">Система автоматизации, которая управляет освещением, отоплением, безопасностью и бытовой техникой через смартфон или голосовые команды. Она делает жизнь комфортнее, экономнее и безопаснее, адаптируясь под привычки и потребности жильцов.
                   </a>
-                  <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
+                  <p class="my-3"><a href="smart_appart.html" class="more-39291">Подробнее</a></p>
                 </div>
               </div>
               <div class="card">
@@ -269,9 +269,9 @@
                 Дом
               </div>
                 <div class="card-body h2">
-                  <a href="#">Расширенная система автоматизации, которая управляет освещением, климатом, видеонаблюдением, воротами, поливом участка и другими функциями через централизованное управление. Он обеспечивает повышенный комфорт, энергоэффективность и безопасность для большого пространства, адаптируясь под ваши потребности.
+                  <a href="smart_home.html">Расширенная система автоматизации, которая управляет освещением, климатом, видеонаблюдением, воротами, поливом участка и другими функциями через централизованное управление. Он обеспечивает повышенный комфорт, энергоэффективность и безопасность для большого пространства, адаптируясь под ваши потребности.
                   </a>
-                  <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
+                  <p class="my-3"><a href="smart_home.html" class="more-39291">Подробнее</a></p>
       
                 </div>
               </div>
