--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 Офис
               </div>
                 <div class="card-body h2">
-                  <a href="#">Интеллектуальная система, автоматизирует управление светом, климатом, контролем доступа и рабочими процессами для повышения комфорта сотрудников и энергоэффективности. Она оптимизирует рабочее пространство, позволяя создать современную и продуктивную среду.</a>
+                  <a href="smart_office.html">Интеллектуальная система, автоматизирует управление светом, климатом, контролем доступа и рабочими процессами для повышения комфорта сотрудников и энергоэффективности. Она оптимизирует рабочее пространство, позволяя создать современную и продуктивную среду.</a>
                   <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
                 </div>
               </div>
