--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 Отель
               </div>
                 <div class="card-body h2">
-                  <a href="#">Автоматизируйте процессы бронирования, контроль доступа, освещение и климат в номерах, создавая комфорт для гостей и повышая эффективность работы персонала.</a>
+                  <a href="smart_hotel.html">Автоматизируйте процессы бронирования, контроль доступа, освещение и климат в номерах, создавая комфорт для гостей и повышая эффективность работы персонала.</a>
                   <p class="my-3"><a href="#" class="more-39291">Подробнее</a></p>
                 </div>
               </div>
