--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <span class="img-wrap mb-5">
                 <img src="fonts/flaticon/svg/001-stairs.svg" alt="Image" class="img-fluid">
               </span>
-              <h3 class="mb-4"><a href="#">Управление освещением</a></h3>
+              <h3 class="mb-4"><a href="light.html">Управление освещением</a></h3>
               <p>Создайте идеальную атмосферу в доме, регулируя свет с помощью смартфона или голоса, настраивая яркость, цвет и расписание под ваш ритм жизни.</p>
             </div>
           </div>
@@ -198,8 +198,17 @@
               <span class="img-wrap mb-5">
                 <img src="fonts/flaticon/svg/002-kitchen.svg" alt="Image" class="img-fluid">
               </span>
-              <h3 class="mb-4"><a href="#">Управление климатом</a></h3>
+              <h3 class="mb-4"><a href="climate.html">Управление климатом</a></h3>
               <p>Поддерживайте идеальную температуру и влажность в доме автоматически, управляя отоплением, кондиционером и вентиляцией через смартфон или голосовые команды.</p>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-29193 text-center">
+              <span class="img-wrap mb-5">
+                <img src="fonts/flaticon/svg/006-pantone.svg" alt="Image" class="img-fluid">
+              </span>
+              <h3 class="mb-4"><a href="#">Управление Моторами</a></h3>
+              <p>Управляйте шторами и жалюзи, фрамугами и форточками удалённо и локально, настраивайте расписание и повышайте удобство, делая ваш дом еще умнее и функциональнее.</p>
             </div>
           </div>
           <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
@@ -234,15 +243,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-29193 text-center">
-              <span class="img-wrap mb-5">
-                <img src="fonts/flaticon/svg/006-pantone.svg" alt="Image" class="img-fluid">
-              </span>
-              <h3 class="mb-4"><a href="#">Управление Отелем</a></h3>
-              <p>Автоматизируйте процессы бронирования, контроль доступа, освещение и климат в номерах, создавая комфорт для гостей и повышая эффективность работы персонала.</p>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
