--- a/equipment.html
+++ b/equipment.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <title>Умные дома. Управление Моторами.</title>
+  <title>Умные дома. Управление Электрооборудованием.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -102,13 +102,13 @@
         <div class="row">
           <div class="col-12">
             <div class="box-descr text-center">
-              <h3 class="mb-4 heading">Управление Моторами</h3>
-              <p>Шторы открываются с первыми лучами солнца, ворота плавно распахиваются, когда вы подъезжаете, а окна приоткрываются для свежего воздуха — и всё это без единого усилия с вашей стороны. Управление моторами в умном доме делает жизнь удобнее, добавляя в ваш дом немного магии автоматизации. </p>
+              <h3 class="mb-4 heading">Управление Электрооборудованием</h3>
+              <p>Представьте, что ваш дом сам выключает забытый утюг, запускает кофеварку к вашему пробуждению, а розетки отключаются, когда вас нет дома. Управление электрооборудованием в умном доме — это не только удобство, но и забота о безопасности и экономии. </p>
 
               <div class="row mb-3 d-flex justify-content-center align-items-center">
                 
                 <div class="col-7">
-                  <p>Система превращает управление моторами в интуитивный процесс: открываются форточки и поднимаются шторы по расписанию или по команде с элегантной сенсорной панели.</p>
+                  <p>Умный дом превращает управление техникой в искусство: розетки, светильники и приборы подчиняются вашим сценариям — например, «Утро» включает чайник и тёплый пол. Умный дом даёт свободу выбора: через приложение вы можете выключить любой прибор из другой комнаты или даже города.</p>
 
                 </div>  
                 <div class="col-5">
@@ -121,13 +121,17 @@
                   <img src="images/modernization.jpg" alt="" width="500">
                 </div>
                 <div class="col-7">
-                  <p>Всё начинается с умной системы, которая связывает моторы с вашим домом. Используя контроллеры и реле, чтобы управлять моторами для штор, экранов проекторов или лифтами для телевизоров и проекторов — всё интегрировано и работает как часы. И всем этим мы можем управлять как с телефона, так с сенсорной панели или голосом.</p>
+                  <p>Современное электрооборудование все чаще стало оснащаться интерфейсами управления, благодаря которым мы можем не только включать и выключать приборы, но и выбирать режимы работы и параметры работы оборудования. Управление таким оборудованием мы осуществляем посредством контроллеров Умного дома. Электрооборудование без встроенных интерфейсов, управляется через реле.</p>
                 </div>
               </div>
               <div class="row mb-3 d-flex justify-content-center align-items-center">
                 <div class="col-7">
 
-                  <P>Управление моторами — это не просто удобство, но реальная польза. Шторы открываются по сценарию, способствуя «мягкому» пробуждению, датчики контролируют состояние воздуха в комнате и по необходимости, открывают окна для проветривания. Настраивая различные сценарии, вы можете не «забивать» голову каждодневными рутинными делами, автоматика все сделает за вас.</P>
+                  <P>Умное управление электрооборудованием меняет ваш дом:</P>
+                  <p>
+                    Экономия. Умный дом помогает настроить расписание, чтобы техника не работала впустую.<br>
+                    Удобство. Один клик — и дом готов к вашему возвращению: кофе варится, мультиварка включается на разогрев.
+                  </p>
                 </div>
                 <div class="col-5">
                   <img src="images/reprogramming.jpg" alt="" width="500">
@@ -136,7 +140,7 @@
 
 
               <p>
-                Моторы стали частью умного дома, который заботится о вас. Будь то утренний бриз через открытые окна или ворота, встречающие вас вечером, — всё работает так, как вы хотите. Начните с одной детали, и скоро вы удивитесь, как жили без этого. Ваш дом готов двигаться в ритме вашей жизни!
+                С Умными решениями электрооборудование становится вашим помощником. Забудьте о лишних заботах — техника работает тогда, когда вам нужно, и отдыхает, когда не нужна. Начните с одной розетки, и скоро ваш дом станет умнее, чем вы могли мечтать. 
 
               </p>
             </div>
@@ -146,7 +150,7 @@
       </div>
 
     <div class="arrow-left">
-      <a href="climate.html">
+      <a href="motors.html">
         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
         </svg>
@@ -154,7 +158,7 @@
       </a>
     </div>
     <div class="arrow-right">
-     <a href="equipment.html">
+     <a href="">
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
       </svg>
