--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               <span class="img-wrap mb-5">
                 <img src="fonts/flaticon/svg/006-pantone.svg" alt="Image" class="img-fluid">
               </span>
-              <h3 class="mb-4"><a href="#">Управление Моторами</a></h3>
+              <h3 class="mb-4"><a href="motors.html">Управление Моторами</a></h3>
               <p>Управляйте шторами и жалюзи, фрамугами и форточками удалённо и локально, настраивайте расписание и повышайте удобство, делая ваш дом еще умнее и функциональнее.</p>
             </div>
           </div>
@@ -216,7 +216,7 @@
               <span class="img-wrap mb-5">
                 <img src="fonts/flaticon/svg/003-lamp.svg" alt="Image" class="img-fluid">
               </span>
-              <h3 class="mb-4"><a href="#">Управление электрооборудованием</a></h3>
+              <h3 class="mb-4"><a href="equipment.html">Управление электрооборудованием</a></h3>
               <p>Контролируйте работу бытовых приборов удаленно, настраивайте расписание и экономьте энергию, делая ваш дом умным и удобным.</p>
             </div>
           </div>
