--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <span class="img-wrap mb-5">
                 <img src="fonts/flaticon/svg/004-blueprint.svg" alt="Image" class="img-fluid">
               </span>
-              <h3 class="mb-4"><a href="#">Аудио-Видео</a></h3>
+              <h3 class="mb-4"><a href="av.html">Аудио-Видео</a></h3>
               <p>Наслаждайтесь идеальным звуком и изображением, управляя мультимедийными системами через смартфон или голосовые команды, создавая атмосферу настоящего кинотеатра у себя дома.
 
               </p>
