--- a/av.html
+++ b/av.html
@@ -112,13 +112,13 @@
 
                 </div>  
                 <div class="col-5">
-                  <img src="images/integration.jpg" alt="" width="500">
+                  <img src="images/ProjectAV.jpg" alt="" width="500">
                 </div>
               </div>
                
               <div class="row mb-3 d-flex justify-content-center align-items-center">
                 <div class="col-5">
-                  <img src="images/modernization.jpg" alt="" width="500">
+                  <img src="images/HomeTheater.jpg" alt="" width="500">
                 </div>
                 <div class="col-7">
                   <p>Домашний кинотеатр - это аудио-видеосистема, построенная на базе телевизора или проектора и оснащенная многоканальным звуком.</p>
@@ -135,13 +135,13 @@
                   </p>
                 </div>
                 <div class="col-5">
-                  <img src="images/reprogramming.jpg" alt="" width="500">
+                  <img src="images/MultiRoom.jpg" alt="" width="500">
                 </div>
               </div>
 
               <div class="row mb-3 d-flex justify-content-center align-items-center">
                 <div class="col-5">
-                  <img src="images/modernization.jpg" alt="" width="500">
+                  <img src="images/Conference.jpg" alt="" width="500">
                 </div>
                 <div class="col-7">
                   <p>Конференц-системы — это комплекс аудио-видео и управляющего оборудования, который обеспечивает общение между различными группами людей, находящимися в разных местах. Мы установим микрофоны, которые улавливают каждое слово, камеры с автоматическим наведением, экраны с проекторами для презентаций и программное обеспечение для видеозвонков. Объединим систему в умный офис, позволяя управлять всем через одно устройство — будь то сенсорная панель, планшет или с помощью голосовых команд. </p>
@@ -172,7 +172,7 @@
       </a>
     </div>
     <div class="arrow-right">
-     <a href="">
+     <a href="access.html">
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
       </svg>
